--- a/force-app/main/classes/FFAuthServiceCached.cls
+++ b/force-app/main/classes/FFAuthServiceCached.cls
@@ -66,6 +66,7 @@ public class FFAuthServiceCached implements FFAuthService {
         } catch (FFBase.ApiException e) {
             System.debug('Auth Error');
             System.debug(e);
+            // TODO retry on more than just 403
             if(e.getStatusCode() == 403) {
                 if(retry < this.config.authRetries) {
                     System.debug('Retrying authentication, retry no. ' + retry);
