FFM-10286 Add new cache item for lastAuth

--- a/force-app/main/classes/FFAuthService.cls
+++ b/force-app/main/classes/FFAuthService.cls
@@ -1,3 +1,5 @@
 public interface FFAuthService {
-    FFModels.AuthInfo authenticate();
+    FFModels.AuthInfo authenticate(Boolean force);
+    FFModels.LastAuthTime getLastAuthTime();
+    
 } 
