--- a/force-app/test/FFClientTest.cls
+++ b/force-app/test/FFClientTest.cls
@@ -11,30 +11,38 @@ private class FFClientTest {
         }
     
         public HttpResponse respond(HttpRequest request) {
-            if(request.getEndpoint() == '/client/env/{environmentUUID}/feature-configs') {
+            String endpoint = request.getEndpoint();
+    
+            if (endpoint.contains('/client/env/{environmentUUID}/feature-configs')) {
                 return httpResponse(features);
             } else return httpResponse(targets);
+            
         }
     }
 
     private class MockFFAuthService implements FFAuthService {
         private FFModels.AuthInfo mockAuthInfo;
         private FFModels.LastAuthTime mockLastAuthTime;
-
+        public Boolean authenticateCalled = false;
     
         public MockFFAuthService(FFModels.AuthInfo mockAuthInfo) {
             this.mockAuthInfo = mockAuthInfo;
         }
     
         public FFModels.AuthInfo authenticate(Boolean force) {
+            authenticateCalled = true;
             return mockAuthInfo;
         }
-
+    
         public FFModels.LastAuthTime getLastAuthTime() {
             return mockLastAuthTime;
         }
     
+        public void setLastAuthTime(FFModels.LastAuthTime lastAuthTime) {
+            this.mockLastAuthTime = lastAuthTime;
+        }
     }
+    
 
     private static HttpResponse httpResponse(Object content) {
         HttpResponse res = new HttpResponse();
@@ -45,13 +53,22 @@ private class FFClientTest {
         return res;
     }
 
-    private static FFClientApi mockClientApi(List<FFModelsFeatures.FeatureConfig> features, List<FFModelsFeatures.TargetSegment> targets) {
+    private static FFClientApi mockApi(List<FFModelsFeatures.FeatureConfig> features, List<FFModelsFeatures.TargetSegment> targets) {
         Test.setMock(HttpCalloutMock.class, new Responder(features, targets));
         Map<String, Object> params = new Map<String, Object>{
             'environmentUUID' => 'test',
             'cluster' => 'test'
         };
         return new FFClientApi(new FFBaseCallout('test', 'test'));
+    }
+
+    private static FFMetricsApi mockMetricsApi(List<FFModelsFeatures.FeatureConfig> features, List<FFModelsFeatures.TargetSegment> targets) {
+        Test.setMock(HttpCalloutMock.class, new Responder(features, targets));
+        Map<String, Object> params = new Map<String, Object>{
+            'environmentUUID' => 'test',
+            'cluster' => 'test'
+        };
+        return new FFMetricsApi(new FFBaseCallout('test', 'test'));
     }
 
     @isTest
@@ -64,7 +81,7 @@ private class FFClientTest {
 
 
         FFConfig config = FFConfig.builder().cache(new FFMockCache()).build();
-        FFClient client = new FFClient(null, mockClientApi(features, targets), null, config, 'test', 'test');
+        FFClient client = new FFClient(null, mockApi(features, targets), null, config, 'test', 'test');
         System.assertEquals(null, config.cache.getFeatures());
         System.assertEquals(null, config.cache.getSegments());
 
@@ -229,4 +246,62 @@ private class FFClientTest {
         FFTarget target = FFTarget.builder().identifier('test').anonymous(false).attributes(null).build();
         System.assertEquals(false, client.boolVariation('test-feature', target, true));
     }
+
+    // @isTest
+    // private static void shouldReauthenticateWhenTokenIsAboutToExpire() {
+    //     FFModels.AuthInfo mockAuthInfo = new FFModels.AuthInfo('mockToken', 'envUUID', 'cluster');
+    //     MockFFAuthService mockAuthService = new MockFFAuthService(mockAuthInfo);
+
+    //     // Set the last authentication time to be just over 23 hours ago
+    //     Long pastTimeMillis = Datetime.now().addSeconds(-((23 * 60 * 60) + 1)).getTime();
+    //     mockAuthService.setLastAuthTime(new FFModels.LastAuthTime(String.valueOf(pastTimeMillis)));
+
+    //     FFConfig config = FFConfig.builder().authExpireAfter(24 * 60 * 60).cache(new FFMockCache()).build();
+    //     FFClient client = new FFClient(mockAuthService, null, null, config, 'test', 'test');
+
+    //     new FFPoller(new FFClient.CacheUpdator(client))
+    //     .staticDelay(1)
+    //     .untilTrue(new FFClientBuilder.AlwaysFalse())
+    //     .execute();
+    
+
+
+    //     // Verify that reauthentication was triggered
+    //     System.assertEquals(true, mockAuthService.authenticateCalled, 'Reauthentication was not triggered as expected');
+    // }
+
+    @isTest
+    private static void shouldReauthenticateWhenTokenIsAboutToExpire() {
+        // Create mock authentication information
+        FFModels.AuthInfo mockAuthInfo = new FFModels.AuthInfo('mockToken', 'envUUID', 'cluster');
+        MockFFAuthService mockAuthService = new MockFFAuthService(mockAuthInfo);
+
+        // Set the last authentication time to be just over 23 hours ago
+        // This simulates the condition where the token is near its expiration
+        Long pastTimeMillis = Datetime.now().addSeconds(-((23 * 60 * 60) + 1)).getTime();
+        mockAuthService.setLastAuthTime(new FFModels.LastAuthTime(String.valueOf(pastTimeMillis)));
+
+        // Create the FFClient configuration with a specified expiration interval
+        FFConfig config = FFConfig.builder().authExpireAfter(24 * 60 * 60) // Token expires after 24 hours
+                                    .cache(new FFMockCache()).build();
+
+
+
+        List<FFModelsFeatures.FeatureConfig> features = new List<FFModelsFeatures.FeatureConfig>();
+        List<FFModelsFeatures.TargetSegment> targets = new List<FFModelsFeatures.TargetSegment>();
+        // Instantiate FFClient with the mock auth service
+        FFClient client = new FFClient(mockAuthService, mockApi(features, targets), mockMetricsApi(features, targets), config, 'test', 'test');
+
+        // Instantiate the CacheUpdator with the FFClient instance
+        FFClient.CacheUpdator cacheUpdator = new FFClient.CacheUpdator(client);
+
+        // Directly invoke the logic that would be triggered by the poller
+        // This should check the last authentication time and decide whether to reauthenticate
+        cacheUpdator.call(null, null);
+
+        // Verify that reauthentication was triggered due to the token being near expiration
+        System.assertEquals(true, mockAuthService.authenticateCalled, 'Reauthentication was not triggered as expected');
+    }
+
+
 }
